--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -32,3 +32,4 @@ analyzer:
   errors:
     invalid_annotation_target: ignore
     must_be_immutable: ignore
+    use_build_context_synchronously: ignore
