--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,10 @@ dependencies:
   freezed_annotation: ^3.1.0
   dio: ^5.9.0
   flutter_animate: ^4.5.2
-  liquid_glass_renderer: ^0.1.1-dev.10
+  glass_kit: ^4.0.1
   json_annotation: ^4.9.0
   flutter_secure_storage: ^9.2.4
+  fl_chart: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +60,6 @@ dev_dependencies:
   riverpod_lint: ^2.6.5
   freezed: ^3.1.0
   json_serializable: ^6.9.5
-  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
